    * 1153 FIX: Changed custom user attributes can now be used immediately...
    * 0201 FIX: Fixed error message in Rulelist of RBN...
    * 1100 FIX: WATO backup domains: fixed bug were excluded files still got deleted on snapshot restore...
    * 1101 FIX: WATO check parameter: renamed 'Nominal Voltages' to 'Voltage Levels..'
    * 1396 FIX: Fix default setting of Enable sounds in views...

    Notifications:
    * 1151 Add variables (HOST/SERVICE)ACK(AUTHOR/COMMENT) to notification context...
    * 1394 HTML notifications have a new content field for debugging variables...
    * 1156 FIX: Graphs in HTML mails are now sent again where they where missing...
    * 1157 FIX: Fixed SMS plugin on at least debian (distrs which have no sendsms/smssend)...

    Event Console:
    * 1148 Allow execution of actions when cancelling events...
    * 1395 Event Console can now create notifications via Check_MK RBN...
    * 1007 FIX: check_mkevents: fix case where events contain binary zeroes

    HW/SW-Inventory:
    * 0643 windows inventory: OS now contains the install date, reg_uninstall now contains the path...
            NOTE: Please refer to the migration notes!
    * 0652 windows software inventory gives some more details about OS and installed software...
            NOTE: Please refer to the migration notes!
    * 0653 script to extract hw/sw inventory data in csv format...
    * 0655 FIX: win_cpuinfo and mk_inventory.ps1 agent: unit of CPU speed fixed, fixes for long output lines in agent

    check:
    * 1384 oracle_jobs: new WATO rules, changed service name to SID.OWNER.NAME...
            NOTE: Please refer to the migration notes!


1.2.5i5:
    Core & Setup:
    * 1012 Fix quoting of backslashes in custom checks with nagios core...
            NOTE: Please refer to the migration notes!
    * 1038 Massive speedup of cmk --snmptranslate
    * 1035 FIX: Do not fail on errors in *.mk files anymore - except in interactive mode...