@@ -1,0 +1,9 @@
+Title: WATO active checks: passwords no longer shown as plain text.
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.2.5i6
+Date: 1410423570
+Class: fix
+
+Password fields of active checks are now displayed as *****
