@@ -109,6 +109,7 @@
     * 1100 FIX: WATO backup domains: fixed bug were excluded files still got deleted on snapshot restore...
     * 1101 FIX: WATO check parameter: renamed 'Nominal Voltages' to 'Voltage Levels..'
     * 1396 FIX: Fix default setting of Enable sounds in views...
+    * 1109 FIX: WATO active checks: passwords no longer shown as plain text....
 
     Notifications:
     * 1151 Add variables (HOST/SERVICE)ACK(AUTHOR/COMMENT) to notification context...
